--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-pager-view": "^6.7.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.17.4",
