--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/elements": "^2.4.2",
     "@react-navigation/material-top-tabs": "^7.2.13",
-    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.3.5",
@@ -43,12 +43,12 @@
     "react-icons": "^5.5.0",
     "react-native": "^0.79.4",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-pager-view": "^6.7.1",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-reanimated": "^3.17.4",
+    "react-native-reanimated": "3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.4.0",
