--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "^53.0.15",
     "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.11",
+    "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
     "expo-notifications": "~0.31.3",
     "expo-sharing": "^13.1.5",
