--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-notifications": "~0.31.3",
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "^2.2.3",
+    "html-to-md": "^0.8.8",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.509.0",
@@ -51,6 +52,7 @@
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
