--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.3.5",
     "expo": "^53.0.17",
+    "expo-asset": "~11.1.7",
     "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.11",
     "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
-    "expo-notifications": "~0.31.3",
+    "expo-notifications": "^0.31.4",
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "^2.2.3",
     "html-to-md": "^0.8.8",
