--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.1",
+    "@react-native/virtualized-lists": "^0.72.8",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/elements": "^2.4.2",
@@ -65,7 +66,9 @@
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^19.1.8",
+    "@types/react-native": "^0.72.8"
   },
   "expo": {
     "doctor": {
