--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
+    "@types/react-native": "^0.73.0",
     "axios": "^1.3.5",
     "expo": "^53.0.17",
     "expo-asset": "~11.1.7",
@@ -67,8 +68,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.0.10",
-    "@types/react-native": "^0.72.8"
+    "@types/react": "^19.0.10"
   },
   "expo": {
     "doctor": {
