--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react-native": "^0.73.0",
     "axios": "^1.3.5",
-    "expo": "^53.0.17",
+    "expo": "^53.0.18",
     "expo-asset": "~11.1.7",
     "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.11",
@@ -37,11 +37,14 @@
     "expo-notifications": "^0.31.4",
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "^2.2.3",
+    "expo-system-ui": "~5.0.10",
     "html-to-md": "^0.8.8",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
+    "isexe": "^3.1.1",
     "lucide-react": "^0.509.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "pngjs": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
@@ -64,8 +67,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
-    "react-redux": "^9.2.0",
-    "expo-system-ui": "~5.0.10"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
