--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "isexe": "^3.1.1",
     "lucide-react": "^0.509.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "moment": "^2.30.1",
     "pngjs": "^7.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
