--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@ant-design/react-native": "^5.4.2",
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
