--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-asset": "~11.1.7",
     "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.11",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
     "expo-notifications": "^0.31.4",
@@ -70,8 +71,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
-    "react-redux": "^9.2.0",
-    "expo-image-picker": "~16.1.4"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
