--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
     "isexe": "^3.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.509.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "moment": "^2.30.1",
