--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react-native": "^0.73.0",
     "axios": "^1.3.5",
-    "expo": "^53.0.19",
+    "expo": "53.0.20",
     "expo-asset": "~11.1.7",
     "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.11",
@@ -48,6 +48,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.509.0",
     "metro-react-native-babel-preset": "^0.77.0",
+    "mime": "^4.0.7",
     "moment": "^2.30.1",
     "pngjs": "^7.0.0",
     "react": "^19.0.0",
@@ -58,6 +59,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-markdown-display": "^7.0.2",
     "react-native-pager-view": "^6.7.1",
     "react-native-qrcode-svg": "^6.3.15",
@@ -72,7 +74,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "remove-markdown": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
