--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react-native": "^0.73.0",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.13",
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
     "expo-device": "^7.1.4",
+    "expo-document-picker": "~13.1.6",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
