--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.13",
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
+    "expo-camera": "^16.1.11",
     "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "^18.1.11",
