--- a/package.json
+++ b/package.json
@@ -32,16 +32,18 @@
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
     "expo-camera": "^16.1.11",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
-    "expo-notifications": "^0.31.4",
+    "expo-notifications": "~0.31.4",
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "^2.2.3",
     "expo-system-ui": "~5.0.10",
+    "firebase": "^12.0.0",
     "html-to-md": "^0.8.8",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
