--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
     "expo-camera": "^16.1.11",
-    "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "^18.1.11",
+    "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-media-library": "^17.1.7",
@@ -78,8 +78,7 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
-    "remove-markdown": "^0.6.2",
-    "expo-image-manipulator": "~13.1.7"
+    "remove-markdown": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
