--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
-    "remove-markdown": "^0.6.2"
+    "remove-markdown": "^0.6.2",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
