--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
-    "@types/react-native": "^0.73.0",
     "axios": "^1.3.5",
     "dayjs": "^1.11.13",
-    "expo": "53.0.20",
+    "expo": "^53.0.20",
     "expo-asset": "~11.1.7",
     "expo-camera": "^16.1.11",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "^18.1.11",
@@ -78,8 +78,7 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
-    "remove-markdown": "^0.6.2",
-    "expo-dev-client": "~5.2.4"
+    "remove-markdown": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -96,7 +95,8 @@
           "metro-react-native-babel-preset",
           "react-icons",
           "react-native-vector-icons",
-          "react-native-responsive-dimensions"
+          "react-native-responsive-dimensions",
+          "jwt-decode"
         ],
         "listUnknownPackages": false
       }
