--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/messaging": "^22.4.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/virtualized-lists": "^0.72.8",
@@ -32,7 +35,7 @@
     "expo-asset": "~11.1.7",
     "expo-camera": "^16.1.11",
     "expo-dev-client": "~5.2.4",
-    "expo-device": "^7.1.4",
+    "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "^18.1.11",
     "expo-image-manipulator": "~13.1.7",
@@ -43,6 +46,7 @@
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "^2.2.3",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "firebase": "^12.0.0",
     "html-to-md": "^0.8.8",
     "i18next": "^25.1.2",
@@ -55,7 +59,6 @@
     "moment": "^2.30.1",
     "pngjs": "^7.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-native": "^0.79.5",
@@ -82,7 +85,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.0.10"
+    "@types/react": "^19.0.10",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
   "expo": {
     "doctor": {
