--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "moment": "^2.30.1",
     "pngjs": "^7.0.0",
     "react": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-native": "^0.79.5",
@@ -82,7 +83,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
-    "remove-markdown": "^0.6.2"
+    "remove-markdown": "^0.6.2",
+    "scheduler": "^0.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
