--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli": "^18.0.0",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -29,10 +29,10 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
-    "@types/react-native": "^0.72.8",
+    "@types/react": "~19.0.10",
     "axios": "^1.3.5",
     "dayjs": "^1.11.13",
-    "expo": "^53.0.20",
+    "expo": "53.0.20",
     "expo-asset": "~11.1.7",
     "expo-camera": "^16.1.11",
     "expo-dev-client": "~5.2.4",
@@ -48,7 +48,6 @@
     "expo-status-bar": "^2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-updates": "~0.28.17",
-    "firebase": "^12.0.0",
     "html-to-md": "^0.8.8",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -59,36 +58,35 @@
     "mime": "^4.0.7",
     "moment": "^2.30.1",
     "pngjs": "^7.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.1.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
-    "react-native": "^0.79.5",
+    "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-pager-view": "^6.7.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.11.2",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.13.5",
+    "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "remove-markdown": "^0.6.2",
     "scheduler": "^0.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^19.0.10",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0"
   },
