--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react": "~19.0.10",
     "axios": "^1.3.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
