--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
+    "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/virtualized-lists": "^0.72.8",
     "@react-navigation/bottom-tabs": "^7.3.13",
@@ -35,6 +36,8 @@
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
     "expo-camera": "^16.1.11",
+    "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
@@ -42,12 +45,17 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
+    "expo-linking": "5.0.0",
     "expo-media-library": "^17.1.7",
+    "expo-modules-core": "~2.5.0",
     "expo-notifications": "~0.31.4",
+    "expo-random": "^14.0.1",
+    "expo-secure-store": "~14.2.3",
     "expo-sharing": "^13.1.5",
     "expo-status-bar": "^2.2.3",
     "expo-system-ui": "~5.0.10",
     "expo-updates": "~0.28.17",
+    "gapi-script": "^1.2.0",
     "html-to-md": "^0.8.8",
     "i18next": "^25.1.2",
     "i18next-browser-languagedetector": "^8.1.0",
