--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@firebase/util": "^1.13.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/app": "^22.4.0",
@@ -30,6 +31,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "axios": "^1.3.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
