--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^23.0.0",
     "@react-native-firebase/messaging": "^22.4.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-picker/picker": "^2.11.1",
