--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   },
   "dependencies": {
     "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@expo/config-plugins": "~10.1.1",
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@firebase/util": "^1.13.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/app": "^23.0.0",
     "@react-native-firebase/auth": "^23.0.0",
-    "@react-native-firebase/messaging": "^22.4.0",
+    "@react-native-firebase/messaging": "^23.0.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/virtualized-lists": "^0.72.8",
@@ -32,7 +33,6 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react": "~19.0.10",
-    "@types/react-native": "^0.72.8",
     "axios": "^1.3.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -48,9 +48,8 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
-    "expo-linking": "5.0.0",
+    "expo-linking": "~7.1.7",
     "expo-media-library": "^17.1.7",
-    "expo-modules-core": "~2.5.0",
     "expo-notifications": "~0.31.4",
     "expo-random": "^14.0.1",
     "expo-secure-store": "~14.2.3",
