--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.13",
     "expo": "53.0.20",
     "expo-asset": "~11.1.7",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
@@ -68,6 +69,7 @@
     "mime": "^4.0.7",
     "moment": "^2.30.1",
     "pngjs": "^7.0.0",
+    "qrcode-decoder": "^0.3.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.5.1",
@@ -81,6 +83,7 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
+    "react-native-qrcode-local-image": "^1.0.7",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
