--- a/package.json
+++ b/package.json
@@ -76,10 +76,12 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-native": "0.79.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-markdown-display": "^7.0.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-pager-view": "6.7.1",
