--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@firebase/util": "^1.13.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/cli": "^18.0.0",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/app": "^23.0.0",
@@ -33,6 +33,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@reduxjs/toolkit": "^2.8.1",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "axios": "^1.3.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
